# nyaya-harness

./: pyproject.toml
Desktop/Experiments/Nyaya_Harness/: README.md  plan.md
Desktop/Experiments/Nyaya_Harness/.nyaya/: current_session.json
Desktop/Experiments/Nyaya_Harness/.nyaya/traces/: session_55bfc9d7.json
Desktop/Experiments/Nyaya_Harness/nyaya/: main.py
Desktop/Experiments/Nyaya_Harness/nyaya/cli/: display.py  interactive.py
Desktop/Experiments/Nyaya_Harness/nyaya/core/: __init__.py  executor.py  failure_router.py  harness.py  validity_gate.py  verifier.py
Desktop/Experiments/Nyaya_Harness/nyaya/llm/: __init__.py
Desktop/Experiments/Nyaya_Harness/nyaya/llm/prompts/: classify.py  verify.py
Desktop/Experiments/Nyaya_Harness/nyaya/schemas/: __init__.py  state.py
Desktop/Experiments/Nyaya_Harness/nyaya/state/: __init__.py  trace.py
Desktop/Experiments/Nyaya_Harness/nyaya/tools/: __init__.py  base.py  pratyaksha.py
Desktop/Experiments/Nyaya_Harness/nyaya_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Desktop/Experiments/Nyaya_Harness/tests/: __init__.py  test_cli.py  test_schemas.py
nyaya/: __init__.py
nyaya/cli/: app.py
nyaya/core/: planner.py
nyaya/llm/: client.py
nyaya/llm/prompts/: __init__.py  execute.py  plan.py  recover.py
nyaya/schemas/: failure.py  pancavayava.py  pramana.py  validity.py
nyaya/state/: manager.py  revision.py
nyaya/tools/: anumana.py  registry.py
tests/: test_harness_happy_path.py  test_tools_pratyaksha.py
